[project]
name = "MF-DataLoader"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "torch ~= 2.1.2",
    "requests ~= 2.31.0"
]

[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools.dynamic]
version = { attr = "mf_dataloader.__version__" }

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120

target-version = "py311"